--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "dot": "^1.1.2",
     "env": "0.0.2",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "massive": "^4.4.0",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^4.4.1",
