--- a/package.json
+++ b/package.json
@@ -27,5 +27,20 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
+  "main": "./server/server.js",
+  "proxy": "http://localhost:3021",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anthony-montoya/mastery.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/anthony-montoya/mastery/issues"
+  },
+  "homepage": "https://github.com/anthony-montoya/mastery#readme"
 }
